overwrite bootstrap _variables, newsletter fleshout, and boxes

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -35,7 +35,7 @@ $grays: map-merge(
   ),
   $grays
 );
-
+// change to blue to teal blue 
 $blue: #3292a6 !default;
 $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
