--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,3 +33,21 @@ body {
     height: 100%;
   }
 }
+
+// MEDIA QUERIES
+
+@media (max-width: 768px) {
+  // make h1 smaller to prevent button from popping out on mobile 
+  #showcase {
+    min-height: 500px;
+
+    h1 {
+      font-size: 4rem;
+    }
+  }
+
+  // spacing for newsletter 
+  .mb-resp {
+    margin-bottom: 1rem; //16px 
+  }
+}
