--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,6 +34,13 @@ body {
   }
 }
 
+// INFO-HEADER 
+#info-header {
+  width: 50%; 
+  margin: auto; 
+  border-bottom: 1px #ddd solid; 
+}
+
 // MEDIA QUERIES
 
 @media (max-width: 768px) {
