--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,6 +41,24 @@ body {
   border-bottom: 1px #ddd solid; 
 }
 
+// AUTHOR SECTION 
+#authors {
+  img {
+    margin-top: -50px; 
+
+  }
+
+  .card:hover {
+    background: $primary; 
+    color: #fff; 
+
+  }
+
+  .fab {
+    color: #fff; 
+  }
+}
+
 // MEDIA QUERIES
 
 @media (max-width: 768px) {
@@ -56,5 +74,10 @@ body {
   // spacing for newsletter 
   .mb-resp {
     margin-bottom: 1rem; //16px 
+  }
+
+  // spacing for authors section 
+  .mb-resp-author {
+    margin-bottom: 3rem; 
   }
 }
